<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/title_addTodo"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nom_tache"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="391dp"
        android:layout_height="65dp"
        android:hint="@string/todoName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nom_tache_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desc_todo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="391dp"
        android:layout_height="65dp"
        android:hint="@string/description">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc_todo_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/requested_by"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="391dp"
        android:layout_height="65dp"
        android:hint="@string/requestedBy"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/requested_by_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/assignee"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="391dp"
        android:layout_height="65dp"
        android:hint="@string/assignee">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/assignee_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/due_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="391dp"
        android:layout_height="65dp"
        android:hint="@string/dueDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/due_date_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="datetime"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_btn"
        android:layout_width="206dp"
        android:layout_height="49dp"
        android:text="@string/creertodo" />

</LinearLayout>

