<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginStart="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- TITRE TASK -->
        <TextView
            android:id="@+id/task"
            android:layout_width="260dp"
            android:layout_height="25dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry"
            tools:text="Un Todo" />
        <!-- COMPLETE BUTTON TASK -->
        <ImageButton
            android:id="@+id/complete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/task"
            android:background="@null"
            android:contentDescription="@string/terminer_un_todo"
            app:layout_constraintStart_toEndOf="@+id/task"
            app:srcCompat="@drawable/ic_baseline_uncomplete_todo_24"
            app:tint="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />
        <!-- DELETE BUTTON TASK -->
        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/complete_btn"
            android:background="@null"
            android:contentDescription="@string/supprimer_un_todo"
            app:layout_constraintStart_toEndOf="@+id/task"
            app:srcCompat="@drawable/ic_baseline_delete_24"
            app:tint="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />
        <!-- SHARE BUTTON TASK -->
        <ImageButton
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/delete_btn"
            android:background="@null"
            android:contentDescription="@string/partager_un_todo"
            app:layout_constraintStart_toEndOf="@+id/task"
            app:srcCompat="@drawable/ic_baseline_share_24dp"
            app:tint="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />
        <!-- DESCRIPTION TASK -->
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:text="@string/description"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />
        <!-- ASSIGNEE -->
        <TextView
            android:id="@+id/assignee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:maxLines="1"
            android:text="@string/assignee"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/description"
            tools:ignore="RtlSymmetry" />
        <!-- REQUESTED BY -->
        <!-- DUE DATE -->

        <TextView
            android:id="@+id/requester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/assignee"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:maxLines="1"
            android:text="@string/requestedBy"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/assignee"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/duedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/requester"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/dueDate"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/assignee"
            tools:ignore="RtlSymmetry" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
